# regional-vitals

./: .gitignore  CONTRIBUTING.md  README.md  demo  demo.py  pyproject.toml  requirements.txt
data/: README_DATA.md
data/processed/: brfss_combined_2011_2023.csv  brfss_coverage_2011_2023.csv  brfss_obesity_2011_2023.csv  brfss_smoking_2011_2023.csv
docs/: NO_OUTPUTS.md  STRUCTURE.md
notebooks/: exploratory_analysis.ipynb  interactive_dashboard.ipynb
outputs/: midwest_growth_summary.csv
outputs/tables/: midwest_coverage_regional_trends.csv  midwest_obesity_regional_trends.csv  (+24 more)
regional_analysis/: __init__.py  example_all_regions_run.py  example_region_run.py  midwest_coverage.py  run_all.py  state_rankings_run.py
scripts/: __init__.py  covid_analysis_run.py  covid_disparity_analysis_run.py  cross_measure_run.py  example_all_regions_run.py  example_region_run.py  explore.py  midwest_coverage.py  multiline_plot_run.py  regional_summary_run.py  run_all.py  state_rankings_run.py  west_smoking.py
src/: compute_prevalence.py  coverage_heatmap.py  covid_analysis.py  covid_disparity_analysis.py  covid_trend_analysis.py  cross_measure.py  data_cleaner.py  download_data.py  preprocessing.py  region_mapping.py  regional_summary.py  state_rankings.py  trend_analysis.py  utils.py
tests/: test_compute_prevalence  test_compute_prevalence.py  test_coverage_heatmap.py  test_covid_analysis.py  test_covid_disparity_analysis.py  test_cross_measure.py  test_region_mapping.py  test_regional_summary.py  test_smoke.py  test_state_rankings.py  test_trend_analysis.py  test_utils.py
