[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "regionalvitals"
version = "0.1.0"
description = "Analyze CDC BRFSS prevalence & trends (2011-2023) across five U.S. regions."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pandas==2.0.3",
    "numpy==1.23.5",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "plotly==5.9.0",
    "statsmodels==0.14.0",
    "scipy==1.11.1",
    "pyyaml==6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
